err/dataviz.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bokeh'...
Listing './lib/python3.5/site-packages/bokeh/application'...
Listing './lib/python3.5/site-packages/bokeh/application/handlers'...
Listing './lib/python3.5/site-packages/bokeh/application/handlers/tests'...
Listing './lib/python3.5/site-packages/bokeh/application/tests'...
Listing './lib/python3.5/site-packages/bokeh/client'...
Listing './lib/python3.5/site-packages/bokeh/client/tests'...
Listing './lib/python3.5/site-packages/bokeh/command'...
Listing './lib/python3.5/site-packages/bokeh/command/subcommands'...
Listing './lib/python3.5/site-packages/bokeh/command/subcommands/tests'...
Listing './lib/python3.5/site-packages/bokeh/command/tests'...
Listing './lib/python3.5/site-packages/bokeh/core'...
Listing './lib/python3.5/site-packages/bokeh/core/_templates'...
Listing './lib/python3.5/site-packages/bokeh/core/property'...
Listing './lib/python3.5/site-packages/bokeh/core/property/tests'...
Listing './lib/python3.5/site-packages/bokeh/core/tests'...
Listing './lib/python3.5/site-packages/bokeh/core/validation'...
Listing './lib/python3.5/site-packages/bokeh/document'...
Listing './lib/python3.5/site-packages/bokeh/document/tests'...
Listing './lib/python3.5/site-packages/bokeh/models'...
Listing './lib/python3.5/site-packages/bokeh/models/tests'...
Listing './lib/python3.5/site-packages/bokeh/models/tests/utils'...
Listing './lib/python3.5/site-packages/bokeh/models/widgets'...
Listing './lib/python3.5/site-packages/bokeh/models/widgets/tests'...
Listing './lib/python3.5/site-packages/bokeh/plotting'...
Listing './lib/python3.5/site-packages/bokeh/plotting/tests'...
Listing './lib/python3.5/site-packages/bokeh/protocol'...
Listing './lib/python3.5/site-packages/bokeh/protocol/messages'...
Listing './lib/python3.5/site-packages/bokeh/protocol/messages/tests'...
Listing './lib/python3.5/site-packages/bokeh/protocol/tests'...
Listing './lib/python3.5/site-packages/bokeh/sampledata'...
Listing './lib/python3.5/site-packages/bokeh/sampledata/icons'...
Listing './lib/python3.5/site-packages/bokeh/server'...
Listing './lib/python3.5/site-packages/bokeh/server/static'...
Listing './lib/python3.5/site-packages/bokeh/server/static/css'...
Listing './lib/python3.5/site-packages/bokeh/server/static/js'...
Listing './lib/python3.5/site-packages/bokeh/server/static/js/compiler'...
Listing './lib/python3.5/site-packages/bokeh/server/tests'...
Listing './lib/python3.5/site-packages/bokeh/server/views'...
Listing './lib/python3.5/site-packages/bokeh/sphinxext'...
Listing './lib/python3.5/site-packages/bokeh/sphinxext/_templates'...
Listing './lib/python3.5/site-packages/bokeh/tests'...
Listing './lib/python3.5/site-packages/bokeh/themes'...
Listing './lib/python3.5/site-packages/bokeh/util'...
Listing './lib/python3.5/site-packages/bokeh/util/tests'...
Listing './lib/python3.5/site-packages/bokeh-0.12.9.egg-info'...
Listing './lib/python3.5/site-packages/dataviz'...
Listing './lib/python3.5/site-packages/dataviz-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
